[project]
name = "wikiracer"
version = "0.1.0"
description = "AI Agent to race through Wikipedia"
readme = "README.md"
authors = [{ name = "Jonathan Desrocher", email = "jondesr@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "networkx>=3.4.2",
    "openai>=1.60.0",
    "pydantic>=2.10.5",
    "pydantic-ai[ollama]>=0.0.20",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "wikipedia>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
# Enable pycodestyle ('E'), pyflakes ('F'), and isort ('I') rules
select = ["E", "F", "I"]
# Same as Black
line-length = 88
# Enable autofix behavior
fix = true
# Disable unused imports check
ignore = ["F401"]

[tool.logfire]
ignore_no_config = true